[project]
name = "wagtail-unveil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Moreton", email = "nickmoreton@me.com" }
]
requires-python = ">=3.10"
dependencies = [
    "wagtail>=6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "wagtail-modeladmin>=2.1.0",
    "tox>=4.11.3",
]
